# docs/swagger.json
@@ -4,6 +4,153 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/account": {
+            "get": {
+                "summary": "get all account record",
+                "responses": {
+                    "200": {
+                        "description": "{\"data\":[{title:title1,complete:1},{title:title2,complete:0}]}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "add account record",
+                "parameters": [
+                    {
+                        "description": "account",
+                        "name": "title",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.CreateAccountModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"msg\":\"ok\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/account/{email}": {
+            "get": {
+                "summary": "get account record",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "email",
+                        "name": "email",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"data\":[{email:example@.xxx.com,complete:1}]}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/book": {
+            "get": {
+                "summary": "get all book record",
+                "responses": {
+                    "200": {
+                        "description": "{\"data\":[{title:title1,complete:1},{title:title2,complete:0}]}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "add book record",
+                "parameters": [
+                    {
+                        "description": "book",
+                        "name": "title",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.CreateBookModel"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"msg\":\"ok\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/book/{title}": {
+            "get": {
+                "summary": "get book record",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "title",
+                        "name": "title",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"data\":[{title:title,complete:1}]}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/order": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "add order record",
+                "parameters": [
+                    {
+                        "description": "order",
+                        "name": "title",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.CreateOrder"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"msg\":\"ok\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/todo": {
             "get": {
                 "summary": "get all todo record",
@@ -66,6 +213,45 @@
         }
     },
     "definitions": {
+        "model.CreateAccountModel": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.CreateBookModel": {
+            "type": "object",
+            "properties": {
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.CreateOrder": {
+            "type": "object",
+            "properties": {
+                "account_email": {
+                    "type": "string"
+                },
+                "book_title": {
+                    "type": "string"
+                },
+                "create_time": {
+                    "type": "string"
+                },
+                "remain_time": {
+                    "type": "number"
+                }
+            }
+        },
         "model.CreateTodoModel": {
             "type": "object",
             "properties": {
